$Id$

Version 0.8.2 (...)

- Include module's preprocess() method is now a little more careful about
  temp file turds.

---------------------------------------------------------------------------
Version 0.8.1 (5 August, 2008)

- grizzled.db now uses SQLite3 PRAGMAs to get table metadata and index
  metadata.

---------------------------------------------------------------------------
Version 0.8 (22 July, 2008)

- Added grizzled.log module (including a WrappingLogFormatter class) which
  contains some classes and functions for use with the standard logging
  module.
- Added grizzled.misc.str2bool() function.

---------------------------------------------------------------------------
Version 0.7.2 (18 July, 2008)

- Added grizzled.history.
- Converted some lingering Epytext markup to reStructuredText.

---------------------------------------------------------------------------
Version 0.7.1 (16 July, 2008)

- Added grizzled.misc module and ReadOnly class.
- Added the spawnd() function the grizzled.os module.
- Enhanced grizzled.db SQLite3 driver to return better index and table
  metadata.

---------------------------------------------------------------------------
Version 0.7 (12 June, 2008)

- Deprecated grizzled.os.file_separator(). Silly me, there's a standard
  os.path.sep variable.
- In grizzled.db, the MySQL index metadata function wasn't detecting column
  uniqueness properly.
- In grizzled.db, the PostgreSQL table metadata function wasn't detecting
  NULL/NOT NULL properly.
- Added find_command() and path_elements() functions to grizzled.os.
- Documentation format changed from default Epydoc to reStructuredText.
- Fixed bug in grizzled.db.add_driver() function that prevented a driver
  from being added programmatically.
- Added class_for_name() function to grizzled.system module.
- grizzled.config now uses grizzled.collections.OrderedDict
- In grizzled.config, Configuration.sections() is now a property.
